[gd_scene load_steps=17 format=3 uid="uid://bsp43pawp632n"]

[ext_resource type="Script" path="res://demo_3d.gd" id="1_ut343"]
[ext_resource type="PackedScene" uid="uid://dgm10m7u26drx" path="res://addons/libmaszyna/console/developer_console.tscn" id="2_ig825"]
[ext_resource type="Material" uid="uid://b7qto250huuby" path="res://materials/custom_demo_ground.tres" id="2_imrpy"]
[ext_resource type="PackedScene" uid="uid://1djubq5jy2wx" path="res://loading_screen/loading_screen.tscn" id="2_n5hjg"]
[ext_resource type="Script" path="res://addons/libmaszyna/environment/maszyna_environment_node.gd" id="2_py6pt"]
[ext_resource type="Shader" path="res://addons/libmaszyna/environment/sky.gdshader" id="2_ydn4r"]
[ext_resource type="Script" path="res://addons/libmaszyna/e3d/e3d_model_instance.gd" id="4_drlsl"]
[ext_resource type="PackedScene" uid="uid://cpnfrm4urr642" path="res://addons/libmaszyna/editor/user_settings_dock.tscn" id="4_dyl8i"]
[ext_resource type="PackedScene" uid="uid://gr0lw1vyf240" path="res://hud/debug_hud.tscn" id="5_vl0kb"]
[ext_resource type="PackedScene" uid="uid://bcxtf08c2yqx4" path="res://vehicles/sm42/sm_42.tscn" id="11_8gidn"]
[ext_resource type="PackedScene" uid="uid://dqwt31s3qnglp" path="res://vehicles/impuls/impuls.tscn" id="12_hsov8"]
[ext_resource type="PackedScene" uid="uid://xh8isp1j28uj" path="res://vehicles/tem2/tem2.tscn" id="13_fe5ju"]
[ext_resource type="PackedScene" uid="uid://dmhikrkk2qsjl" path="res://addons/libmaszyna/player/player.tscn" id="13_nxmm0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s18ef"]
shader = ExtResource("2_ydn4r")
shader_parameter/sky_offset = Vector2(0.49, 0.005)
shader_parameter/exposure = 0.85
shader_parameter/tint_color = Color(1, 1, 1, 1)
shader_parameter/sun_color = Color(10, 8, 1, 1)
shader_parameter/sun_sunset_color = Color(10, 0, 0, 1)
shader_parameter/sun_size = 0.2
shader_parameter/sun_blur = 10.0
shader_parameter/sky_scale = Vector2(0.547, 0.865)

[sub_resource type="Sky" id="Sky_pybda"]
sky_material = SubResource("ShaderMaterial_s18ef")

[sub_resource type="Environment" id="Environment_jrns0"]
background_mode = 2
sky = SubResource("Sky_pybda")
tonemap_mode = 3
tonemap_white = 6.44
ssr_enabled = true
ssao_enabled = true
ssil_enabled = true
sdfgi_enabled = true
sdfgi_min_cell_size = 0.488281
glow_enabled = true
glow_intensity = 0.9
glow_bloom = 0.08
glow_hdr_threshold = 0.29
fog_enabled = true
fog_mode = 1
fog_sun_scatter = 0.4
fog_density = 0.1736
fog_sky_affect = 0.4
fog_depth_curve = 1.1487
fog_depth_end = 67.0
volumetric_fog_enabled = true
volumetric_fog_density = 0.029
volumetric_fog_anisotropy = 0.49
volumetric_fog_length = 2.8
volumetric_fog_detail_spread = 3.95852
volumetric_fog_sky_affect = 0.405
volumetric_fog_temporal_reprojection_amount = 0.99
adjustment_enabled = true

[node name="Demo3D" type="Node3D"]
script = ExtResource("1_ut343")

[node name="LoadingLabel" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="LoadingLabel"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Loading..."

[node name="LoadingScreen" parent="." instance=ExtResource("2_n5hjg")]

[node name="DeveloperConsole" parent="." instance=ExtResource("2_ig825")]

[node name="UserSettingsPanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -292.0
offset_top = 100.0
offset_right = 292.0
offset_bottom = 206.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UserSettingsPanel"]
layout_mode = 2

[node name="GameDirNotSet" type="Label" parent="UserSettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.832245, 0.0664062, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "MaSzyna game folder data is not set or invalid."
horizontal_alignment = 1

[node name="Maszyna Settings" parent="UserSettingsPanel/VBoxContainer" instance=ExtResource("4_dyl8i")]
layout_mode = 2

[node name="DebugHUD" parent="." instance=ExtResource("5_vl0kb")]
player_path = NodePath("../Player")

[node name="MaszynaEnvironmentNode" type="Node" parent="."]
script = ExtResource("2_py6pt")
world_environment = NodePath("../WorldEnvironment")
sky_texture_offset = Vector2(0.49, 0.005)
sky_texture_scale = Vector2(0.547, 0.865)
sky_energy = 0.85

[node name="Player" parent="." instance=ExtResource("13_nxmm0")]
transform = Transform3D(-0.543175, 0, 0.83962, 0, 1, 0, -0.83962, 0, -0.543175, 21.04, 1.959, -18.089)
controlled_vehicle_path = NodePath("../SM42-099")

[node name="Ground" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.069304, -5.63989)
material_override = ExtResource("2_imrpy")
size = Vector3(5000, 0.1, 5000)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.846557, 0.01871, 0.531969, 0.393589, 0.694835, 0.601906, -0.358369, 0.718925, -0.595582, 5.83027, -6.14961, 0)
light_color = Color(0.929688, 0.848771, 0.817108, 1)
light_energy = 2.34
light_indirect_energy = 2.0
light_volumetric_fog_energy = 11.811
shadow_enabled = true
directional_shadow_split_1 = 0.032
directional_shadow_split_2 = 0.1
directional_shadow_split_3 = 0.3
directional_shadow_blend_splits = true
directional_shadow_max_distance = 300.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_jrns0")

[node name="SM42-099" parent="." instance=ExtResource("11_8gidn")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -16.3318, 0, -13.7746)

[node name="Impuls" parent="." instance=ExtResource("12_hsov8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0308414, 0, -4.30589)

[node name="TEM2" parent="." instance=ExtResource("13_fe5ju")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.3788, 0, 0)

[node name="Dekoracje" type="Node3D" parent="."]

[node name="Dworzec Olkusz" type="VisualInstance3D" parent="Dekoracje"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(1, 0, 0, 0, 0.999979, -0.00651009, 0, 0.00651009, 0.999979, 23.6762, -0.0722218, 3.12076)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
layers = 1
script = ExtResource("4_drlsl")
data_path = "models/stacje/"
model_filename = "dworzec_olkusz"
skins = ["dworzec_olkusz_lhs"]

[node name="Dworzec Sosnowiec" type="VisualInstance3D" parent="Dekoracje"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(-0.996005, -0.000581314, -0.0892923, 0, 0.999979, -0.00651009, 0.0892942, -0.00648409, -0.995984, 21.3481, 0.108946, 32.9385)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
layers = 1
script = ExtResource("4_drlsl")
data_path = "models/stacje/"
model_filename = "dworzec_sosnowiec_porabka"
skins = ["dworzec_sosnowiec_porabka"]

[node name="Nastawnia Sochaczew" type="VisualInstance3D" parent="Dekoracje"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(0.995214, -0.000636179, -0.0977197, -2.73898e-10, 0.999979, -0.00651009, 0.0977218, 0.00647893, 0.995193, 49.2187, -0.199109, 49.3024)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
layers = 1
script = ExtResource("4_drlsl")
data_path = "models/sochaczew/"
model_filename = "nastawnia"
skins = ["dworzec_sosnowiec_porabka"]

[node name="Szyb Kleofas" type="VisualInstance3D" parent="Dekoracje"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(-0.00991323, -0.00650977, -0.99993, -3.31827e-10, 0.999979, -0.00651009, 0.999951, -6.45372e-05, -0.00991302, -48.9397, -0.199109, 49.3024)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
layers = 1
script = ExtResource("4_drlsl")
data_path = "models/przemysl/kopalnie"
model_filename = "szyb_kleofas_gigant"
skins = ["dworzec_sosnowiec_porabka"]

[node name="KWK Staszic" type="VisualInstance3D" parent="Dekoracje"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(0.991685, 0.000837795, 0.128689, -7.01784e-10, 0.999979, -0.00651009, -0.128692, 0.00645596, 0.991664, 69.2926, -0.199109, 92.8501)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
layers = 1
script = ExtResource("4_drlsl")
data_path = "models/przemysl/kopalnie/kwk_staszic"
model_filename = "szyb_ii"

[node name="Tabliczka PKP" type="VisualInstance3D" parent="Dekoracje"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(-0.989323, -0.000948765, -0.145735, -8.28882e-10, 0.999979, -0.0065101, 0.145738, -0.00644059, -0.989302, 16.5195, -0.199109, -17.7848)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
layers = 1
script = ExtResource("4_drlsl")
data_path = "models/otoczenie/obiekty_stacyjne"
model_filename = "terenpkp"

[node name="Parkomat" type="VisualInstance3D" parent="Dekoracje"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(-0.997577, -0.000452873, -0.0695637, -5.57518e-10, 0.999979, -0.0065101, 0.0695652, -0.00649432, -0.997556, 18.1062, -0.0388117, -10.9422)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
layers = 1
script = ExtResource("4_drlsl")
data_path = "models/miejskie"
model_filename = "parkomat_rozi_macius9551"

[node name="Skrzynka" type="VisualInstance3D" parent="Dekoracje"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(0.999866, 0.000106457, 0.0163529, -4.68966e-10, 0.999979, -0.0065101, -0.0163532, 0.00650922, 0.999845, 21.1062, -0.0161638, -10.6909)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
layers = 1
script = ExtResource("4_drlsl")
data_path = "models/miejskie"
model_filename = "skrzynka_tel_rozi_macius9551"

[node name="Klamoty" type="VisualInstance3D" parent="Dekoracje"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(0.999866, 0.000106457, 0.0163529, -4.68966e-10, 0.999979, -0.0065101, -0.0163532, 0.00650922, 0.999845, -26.1908, -0.0161638, -13.3744)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
layers = 1
script = ExtResource("4_drlsl")
data_path = "models/kolejowe"
model_filename = "klamoty_naprawcze"

[connection signal="fadein_finished" from="LoadingScreen" to="." method="_on_loading_screen_fadein_finished"]
[connection signal="visibility_changed" from="UserSettingsPanel" to="." method="_on_user_settings_panel_visibility_changed"]
